-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.3
-
None
-
-
3b2dcfa4e (dev), 9e1d71ca9 (6.8)
I am using Qt Designer version 6.7.3.
I found that this version of Qt Designer is unable to generate code for the Layout Alignment property of Widgets.
Even if it appears correct in Qt Designer, errors occur during preview (as if the Layout Alignment property has not been set).
I looked at the generated C++ code and UI files, and found that Qt Designer indeed did not generate the corresponding code for Layout Alignment.
Even though I manually edit the UI file, I still can't preview it properly in Qt Designer. However, Qt UIC can generate correct code, I think this is a bug in Qt Designer.
- is duplicated by
-
PYSIDE-2890 UIC Tool convert .ui file to .py file Qt.AlignmentFlag.AlignHCenter error
-
- Closed
-
-
PYSIDE-2905 QT Design loses Qt::AlignmentFlag information when saving a file.
-
- Closed
-
-
PYSIDE-2912 Generating .py from .ui: Code for QFrame is generated with Syntax Error
-
- Closed
-
-
PYSIDE-2932 QT Widget Designer saving .ui file make AlignmentFlag Error
-
- Closed
-
-
QTCREATORBUG-31796 Qt Creator designer generates invalid code
-
- Closed
-
-
QTCREATORBUG-31988 Selecting
-
- Closed
-
For Gerrit Dashboard: QTBUG-129503 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
595716,5 | Qt Designer: Fix writing horizontal layout aligmnent values | dev | qt/qttools | Status: MERGED | +2 | 0 |
596145,2 | Qt Designer: Fix writing horizontal layout aligmnent values | 6.8 | qt/qttools | Status: MERGED | +2 | 0 |