Qt Designer: Fix writing horizontal layout aligmnent values

Amends 3515deb566eb95e3bdd26350d88703dcaecad7a7.

Fixes: QTBUG-129503
Task-number: PYSIDE-2492
Task-number: QTBUG-118473
Task-number: QTBUG-127179
Task-number: QTBUG-128365
Change-Id: Ia0da318cb5e295c62aa50180dc478a1311427edf
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit 3b2dcfa4e95dca0b54bba743a876b8c2c5a49504)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>